--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -32,7 +32,7 @@ jobs:
 
       - name: Build  🏗️
         run: |
-          npm run build
+          npm run build #
 
       - name: Create .nojekyll file
         run: touch dist/.nojekyll
