--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -36,6 +36,9 @@ jobs:
 
       - name: Create .nojekyll file
         run: touch dist/.nojekyll
+      
+      - name: Copy 404.html to dist/
+        run: cp 404.html dist/
 
       - name: Upload artifact 📡
         uses: actions/upload-pages-artifact@v3
