--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@meforma/vue-toaster": "^1.3.0",
     "@popperjs/core": "^2.11.8",
+    "@vueuse/head": "^2.0.0",
     "@wdns/vue-code-block": "^2.3.2",
     "aos": "^2.3.4",
     "axios": "^1.6.3",
