--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "lightgallery": "^2.7.2",
     "vite": "^5.0.0",
     "vue": "^3.3.13",
+    "vue-mathjax-next": "^0.0.6",
     "vue-router": "^4.2.5",
     "vue3-carousel": "^0.3.1",
     "vuex": "^4.1.0",
